--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8,7 +8,14 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+ @article{regar_tech,
+author={Z. Jiang and H. Abbas and PJ. Mosterman and R. Mangharam},
+title="{Tech Report: Abstraction-Tree For Closed-loop Model Checking of Medical Devices}",
+journal={http://repository.upenn.edu/mlab$\_$papers/73},
+year={2015}
 
+
+}
 @article{cert_prob,
 	Author = {Pamela Elizabeth Scott},
 	Date-Added = {2015-04-19 02:07:07 +0000},
