--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@ zhihaoj@seas.upenn.edu}
 \begin{document}
 
 % the following settings can be set or left blank at first
-\copyrightowner{Z.~Jiang and R.~Mangharam}
+\copyrightowner{R.~Mangharam and Z.~Jiang}
 % \volume{1}
 % \issue{3}
 % \pubyear{2014}
