--- a/bibliography.bib
+++ b/bibliography.bib
@@ -836,3 +836,21 @@ year={2015}
 @misc{stateflow,
 	Howpublished = {{http://www.mathworks.com/help/toolbox/stateflow}},
 	Title = {{Matlab R2011a Documentation $\rightarrow$ Stateflow}}}
+
+@article{pacemakertrends,
+author = {Greenspon, Arnold J. and et al},
+title = {Trends in Permanent Pacemaker Implantation in the United States From 1993 to 2009Increasing Complexity of Patients and Procedures},
+journal = {Journal of the American College of Cardiology},
+volume = {60},
+number = {16},
+pages = {1540-1545},
+year = {2012}
+}
+
+@article{pacemakerrecalls,
+  title={Recalls of cardiac implants in the last decade: what lessons can we learn?},
+  author={Zhang, Shixuan and et. al.},
+  journal = {PLoS ONE 10(5): e0125987.},
+  doi = {doi:10.1371/journal.pone.0125987},
+  year={2015}
+}
